--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_LOGIN_URL = "http://localhost:5000/auth/login"
-VITE_CATEGORIES_URL = "http://localhost:5000/categories"
-VITE_CITIES_URL = "http://localhost:5000/cities"
+VITE_LOGIN_URL = "/auth/login"
+VITE_CATEGORIES_URL = "/categories"
+VITE_CITIES_URL = "/cities"
