--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,12 @@
     "version": 2,
     "builds": [
         {
-           "src": "frontend/package.json",
-           "use": "@vercel/static",
-           "config": { "distDir": "dist" }
+            "src": "package.json",
+            "use": "@vercel/node"
+        },
+        {
+           "src": "frontend/dist/**",
+           "use": "@vercel/static"
         },
         {
             "src": "backend/app.js",
