--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,10 @@
     "version": 2,
     "builds": [
         {
-            "src": "package.json",
-            "use": "@vercel/node"
-        },
-        {
-           "src": "frontend/dist/**",
-           "use": "@vercel/static"
-        },
+            "src": "frontend/package.json",
+            "use": "@vercel/static",  
+            "config": { "distDir": "dist" } 
+          },
         {
             "src": "backend/app.js",
             "use": "@vercel/node"
