--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "name": "save-sellers-time",
     "version": "1.0.0",
     "scripts": {
-      "build": "cd frontend && npm install && npm run build"
+      "build": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm run start"
     }
   }
