--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "save-sellers-time",
     "version": "1.0.0",
     "scripts": {
-      "build frontend": "cd frontend && npm install && npm run build",
-      "build backend": "cd backend && npm install && npm run start"
+      "build": "cd backend && npm install && npm run start"
     }
   }
