change login, password for admin + ping for server

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_STORAGE=./database.sqlite
 JWT_SECRET=your_super_secret_key
-ADMIN_LOGIN=admin
-ADMIN_PASSWORD=12345
+ADMIN_LOGIN=IPPalochkin
+ADMIN_PASSWORD=12345Natalia
 PORT=5000
